# hard_constraint_policy_gradient_methods_for_battery_storage_operations

./: .gitignore  .gitmodules  README.md  TutorialASSUME_Learning_.ipynb  conda_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  tox.ini
batterytrading/: gradient_research.py
batterytrading/[CURRENTLY_NOT_IN_USE] rl_models/: __init__.py  cfg.yml  day_ahead_trader.py
batterytrading/ars/: ars.py  cfg.yml
batterytrading/baselines/: __init__.py  cfg.yml  model_setup.py  pretraining.py  trivialbaselines.py
batterytrading/common/: buffers.py  callbacks.py
batterytrading/data_loader/: __init__.py  data_loader.py  data_loader_batch.py
batterytrading/environment/: __init__.py  ea_pv_consumer_environment.py  environment.py  environment_dict.py
batterytrading/model_based_RL/: PolicyIteration.py  TrivialModel.py  cfg.yml  model_setup.py  pretraining.py
batterytrading/policies/: __init__.py  mapping_functions.py  mlp_policies.py  pretraining_dict.py  recurrent_policies.py  recurrent_policies_dict.py  torch_layers.py
batterytrading/ppo/: __init__.py  cfg.yml  cfg_handler.py  custom pretraining.py  model_setup.py  model_setup_dict.py  policies.py  ppo_masked_recurrent.py  ppo_recurrent_hard_constraint.py  train.py  utils.py
batterytrading/rl_models/: __init__.py  cfg.yml  ppo_actor_critic.py  ppo_actor_critic_lstm.py
batterytrading/time_series_forecasting_models/: Lstm.py
batterytrading/utils/: neural_networks.py
batterytrading/webscraping/: concat-files.py  webscrape_SMARD.py  webscrape_energy_charts.py
batterytrading/wrappers/: __init__.py  wrappers.py
notebooks/: exploration.ipynb  stationary_analysis.ipynb
src/data_loader/: __init__.py  data_loader.py
src/environment/: __init__.py  environment.py
src/models/: __init__.py  day_ahead_trader.py
tests/: test_environment.py
(+5 files in other folders)
