[metadata]
name = batterytrading
version = 0.0.1

[options]
packages = find_namespace:

[options.packages.find]
include = batterytrading*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes
    -rN

filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning

[flake8]
# max line length for black
max-line-length = 155
target-version = ['py310']
# Default flake8 3.5 ignored flags
ignore=
    E24,   # check ignored by default in flake8. Meaning unclear.
    E121,  # continuation line under-indented
    E123,  # closing bracket does not match indentation
    E126,  # continuation line over-indented for hanging indent
    E203,  # space before : (needed for how black formats slicing)
    E226,  # missing whitespace around arithmetic operator
    E704,  # multiple statements on one line (def)
    E731,  # do not assign a lambda expression, use a def
    E741,  # do not use variables named 'l', 'O', or 'I'
    W503,  # line break before binary operator
    W504   # line break after binary operator
exclude=
    .git,
    __pycache__,
    dist,
    doc/_build,
    doc/auto_examples,
    doc/tutorial,
    build,
    asv_benchmarks/env,
    asv_benchmarks/html,
    asv_benchmarks/results,
    asv_benchmarks/benchmarks/cache


# It's fine not to put the import at the top of the file in the examples
# folder.
per-file-ignores =
    examples/*: E402
    doc/conf.py: E402
    */__init__.py: F401


[mypy]
ignore_missing_imports = True
allow_redefinition = True
allow_any_generics = True

